fixed  block sides fade in collapsed fin info article

--- a/containers/CompanyPage/styles.scss
+++ b/containers/CompanyPage/styles.scss
@@ -930,8 +930,8 @@ overflow: hidden;
           position: absolute;
           top: 0;
           bottom: 0;
-          right: 0;
-          left: 0;
+          right: -60px;
+          left: -60px;
           box-shadow: inset 0 130px 90px #fff;
           //      box-shadow: inset 0 150px 150px #fff;
           transform: rotate(180deg);
